--- a/static/css/base.css
+++ b/static/css/base.css
@@ -329,7 +329,7 @@ a.database-link {
 
 .chart-buttons {
   position: absolute;
-  right: 35px;
+  right: 10px;
 }
 
 .chart {
